// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render a card > expected html 1`] = `
<div>
  <div
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700"
      >
        Card Title
      </h3>
      <div
        class="text-sm text-black/60"
      >
        Test Card
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render a card with a link > expected html 1`] = `
<div>
  <a
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
    data-discover="true"
    href="/fr"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700"
      >
        Card Title
      </h3>
      <div
        class="text-sm text-black/60"
      >
        Test Card
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > should render a card with a link with an icon > expected html 1`] = `
<div>
  <div
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
  >
    <div
      class="flex items-center gap-4 p-6"
    >
      <div
        class="flex size-10 shrink-0 items-center justify-center rounded-full bg-slate-700 sm:size-12"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user size-4 text-white sm:size-5"
          data-icon="user"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="flex flex-col space-y-1.5 p-0"
      >
        <h2
          class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700"
        >
          Card Title
        </h2>
        <div
          class="text-sm text-black/60"
        >
          Test Card
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render a card with a link with an icon, content, footer with button and heading2 > expected html 1`] = `
<div>
  <div
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
  >
    <div
      class="flex items-center gap-4 p-6"
    >
      <div
        class="flex size-10 shrink-0 items-center justify-center rounded-full bg-slate-700 sm:size-12"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user size-4 text-white sm:size-5"
          data-icon="user"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="flex flex-col space-y-1.5 p-0"
      >
        <h2
          class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700"
        >
          Card Title
        </h2>
        <div
          class="text-sm text-black/60"
        >
          Test Card
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-3"
    >
      <p>
        Card content part 1
      </p>
      <p>
        Card content part 2
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0"
    >
      <button
        class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
      >
        Click me
      </button>
    </div>
  </div>
</div>
`;

exports[`Card > should render a card with a link with an image > expected html 1`] = `
<div>
  <a
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
    data-discover="true"
    href="/fr"
  >
    <img
      alt=""
      class="relative aspect-video h-40 w-full object-cover sm:h-48"
      draggable="false"
      loading="lazy"
      src="https://www.canada.ca/content/dam/canada/activities/20250115-1-520x200.jpg"
    />
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700"
      >
        Card Title
      </h3>
      <div
        class="text-sm text-black/60"
      >
        Test Card
      </div>
    </div>
    <div
      class="flex items-center p-6 pt-0"
    >
      <span
        class="inline-block bg-cyan-700 px-2 py-1 text-xs text-white"
      >
        Coming soon
      </span>
    </div>
  </a>
</div>
`;
